--- a/_config.yml
+++ b/_config.yml
@@ -3,33 +3,18 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Zain Mobarik
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web Developer Eastern Alabama
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://dyn0.media.forbiddenplanet.com/products/200305b.jpg.jpg
 
 #
 # Flags below are optional
 #
 
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
