--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Zain Mobarik
 
 # Short bio or description (displayed in the header)
-description: Zain.
+description: Zain. Zain. Zain. Zain.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://dyn0.media.forbiddenplanet.com/products/200305b.jpg.jpg
