--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Zain Mobarik
 description: Zain. Zain. Zain. Zain.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://dyn0.media.forbiddenplanet.com/products/200305b.jpg.jpg
+avatar: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjW8Yvtgo7eAhXFKMAKHR4BBBAQjRx6BAgBEAU&url=https%3A%2F%2Fwww.colorcombos.com%2Fcolors%2F9999FF&psig=AOvVaw3piplXY-IEshZz_Li53kA_&ust=1539884476789105
 
 #
 # Flags below are optional
