--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Zain Mobarik
 description: Zain. Zain. Zain. Zain.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiF1pvGg47eAhXpD8AKHWqbDkoQjRx6BAgBEAU&url=https%3A%2F%2Fwww.htmlcsscolor.com%2Fhex%2F9999FF&psig=AOvVaw3piplXY-IEshZz_Li53kA_&ust=1539884476789105
-
+avatar: #9999ff
 #
 # Flags below are optional
 #
