--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Zain Mobarik
 description: Zain. Zain. Zain. Zain.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: #9999ff
+avatar: #99bbff
 #
 # Flags below are optional
 #
